# InfraMIND

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  requirements.txt  walkthrough.md
api/: main.py
api/models/: schemas.py
api/routers/: comparison.py  dag.py  generation.py  simulation.py
api/services/: evaluator_service.py  generator_service.py  llm_provider.py  utils.py
api/websockets/: training_ws.py
config/: __init__.py  default_config.yaml  settings.py
dashboard/: app.js  index.html  style.css
embeddings/: __init__.py  workload_embedder.py
experiments/: __init__.py  ablation.py  generalization.py  runner.py
frontend/: index.html  tailwind.config.js
frontend/src/: App.tsx  constants.ts  index.css
frontend/src/pages/: ArchitectureView.tsx  CodeViewer.tsx  ComparisonPanel.tsx  EvaluationPanel.tsx  ExecutionSimulator.tsx  PromptDashboard.tsx  TrainingDashboard.tsx
metrics/: __init__.py  stability_metrics.py
optimizer/: __init__.py  acquisition.py  adaptive_turbo.py  baselines.py  param_mapper.py  surrogate.py
results/: .gitkeep
scripts/: run_full_experiment.py  run_single_optimization.py  visualize_results.py
simulator/: __init__.py  dag.py  engine.py  request.py  service_node.py
structure_learning/: __init__.py  cluster.py  sensitivity.py
tests/: test_embedder.py  test_metrics.py  test_optimizer.py  test_simulator.py  test_structure_learning.py
workloads/: __init__.py  generator.py  profiles.py
